<resources>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authors_label">Author(s):</string>
    <string name="artists_label">Artist(s):</string>
    <string name="status_label">Status:</string>
    <string name="start_reading_button">Start Reading</string>
    <string name="bookmark_button">Bookmark</string>
    <string name="bookmarked_button">Bookmarked</string>
    <string name="comments_button">Comments</string>
    <string name="subscribe_button">Subscribe</string>
    <string name="share_button">Share</string>
    <string name="image_content_description">Image</string>
    <string name="advance_search_title">Advance Search</string>
    <string name="series_name_title">Series Name</string>
    <string name="author_name_label">Author Name</string>
    <string name="artist_name_label">Artist Name</string>
    <string name="search_button">Search</string>
    <string name="last_page_reached">This is the last available page</string>

    <string name="exit_message">Click again to exit</string>
    <string name="title_filters">Filters</string>
    <string name="source_label">Source</string>
    <string name="list_type_label">List Type</string>
    <string name="grid_label">Grid</string>
    <string name="list_label">List</string>
    <string name="apply_button">Apply</string>
    <string name="settings_menu">settings</string>

    <string-array name="mangaTownTpes">
        <item>Japanese Manga</item>
        <item>Korean Manhwa</item>
        <item>Chinese Manhua</item>
        <item>Show All</item>
    </string-array>

    <string-array name="sources">
        <item>Manga Town</item>
        <item>Holy Manga</item>
    </string-array>
</resources>
